# claude_rts

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  README.md
.github/workflows/: ci.yml
assets/: README.md
docs/: ARCHITECTURE.md  BUILD.md  INDEX.md
docs/superpowers/plans/: 2026-06-20-foundation-batch1-sim.md  2026-06-20-m0-sim-foundation.md  2026-06-20-m0-systems-a-movement.md  2026-06-20-m0-systems-b-economy.md  2026-06-20-m0-systems-c-combat.md
docs/superpowers/specs/: 2026-06-19-foundation-and-m0-design.md  (+2 more)
game/: export_presets.cfg  icon.svg.import  main.tscn  project.godot
game/scripts/: camera_rig.gd  camera_rig.gd.uid  hud.gd  hud.gd.uid  main.gd  main.gd.uid  minimap.gd  minimap.gd.uid
game/tests/: smoke_test.gd  smoke_test.gd.uid
gdext/: README.md  SConstruct
gdext/src/: mock_sim.cpp  register_types.cpp  register_types.h  sim_bridge.cpp  sim_bridge.h
mailbox/: README.md  SETUP-FOR-T.md  agent-instructions.md  decisions.md  from-B.md  from-T.md  reconcile-wake.sh
sim/: CMakeLists.txt  README.md
sim/include/: sim_abi.h
sim/include/sim/: components.h  constants.h  fixed.h  hash.h  map.h  pathfind.h  rng.h  sim_abi.h  world.h
sim/src/: map.cpp  pathfind.cpp  sim_abi.cpp  world.cpp
sim/tests/: test_abi.cpp  test_combat.cpp  test_determinism.cpp  test_economy.cpp  test_events.cpp  test_fixed.cpp  test_hash.cpp  test_leash.cpp  test_map.cpp  test_mapinfo.cpp  test_move.cpp  test_orders.cpp  test_pathfind.cpp  test_rng.cpp  test_train.cpp  test_world.cpp
tests/: README.md
tools/: README.md  gen_sfx.py  gen_sprites.py
(+13 files in other folders)
